Bug 84461 - Regression: boot_vga not set properly for dual-GPU Apple computers
Summary: Regression: boot_vga not set properly for dual-GPU Apple computers
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: PCI (show other bugs)
Hardware: x86-64 Linux
: P1 high
Assignee: drivers_pci@kernel-bugs.osdl.org
URL: https://patchwork.kernel.org/patch/47...
Keywords:
Depends on:
Blocks:
 
Reported: 2014-09-13 16:02 UTC by Bruno Prémont
Modified: 2014-10-10 09:17 UTC (History)
2 users (show)

See Also:
Kernel Version: 3.17-rcX
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments

Description Bruno Prémont 2014-09-13 16:02:49 UTC
As reported by Andreas Noever Apple computers with both integrated Intel GPU and discrete NVidia GPU fail to boot properly with 20cde694027e that landed in 3.17-rc1.

The reason is that that patch stopped forcefully setting default_vga_device according to screen_info memory ownership but did just set first PCI device configured that had both IO and memory resources enabled.

Patch https://patchwork.kernel.org/patch/4771201/ (should be applied with Reported-and-Tested-by: Andreas instead of just reported-by) fixes this by moving the code originally in efifb to vgaarb's init() function and overriding the selection performed while registering PCI vga devices with vgaarb.

Patch https://patchwork.kernel.org/patch/4771211/ should go in at the same time (though not mandatory). It cleans up a few defines not used anymore that were left behind by commit 20cde694027e.
Comment 1 Bruno Prémont 2014-10-10 09:17:55 UTC
Fix commited as 86fd887b7fe350819dae5b55e7fef05b511c8656 to Linus tree, landed in 3.17-rc6.

Note You need to log in before you can comment on or make changes to this bug.